Deleted reference from LOGIC to DAL. Now sending data to/from view via interfaces. Added dependency injection in the VIEW-layer to achieve this. Deleted async methods.

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LOGIC\LOGIC.csproj" />
+  </ItemGroup>
+
 </Project>
