--- a/TicketSystemWeb/TicketSystemWeb.csproj
+++ b/TicketSystemWeb/TicketSystemWeb.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\LOGIC\LOGIC.csproj" />
   </ItemGroup>
 
